# ProtobufCarriageReturn

./: .gitignore  CMakeLists.txt  README.md  dummy.proto  test.cpp
